works now with iLO4 and iLO5
* updated dependencies
* added Logging framework
* some other rework